[package]
name = "thread"
version = "0.1.0"
authors = ["chenjiandongx <chenjiandongx@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7"
scraper = "0.12.0"
reqwest = { version = "0.10", features = ["blocking"] }
